# mnem-o-matic

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cli/: pyproject.toml
cli/src/mnemomatic_cli/: _mcp_client.py  cli.py
docs/: installation.md  tech-stack.md  usage.md
skills/mnemomatic/: SKILL.md
src/mnemomatic/: auth.py  cli.py  db.py  embeddings.py  models.py  server.py
tests/: test_authentication.py  test_db.py  test_db_corruption.py  test_embedder_errors.py  test_input_validation.py  test_mcp_api.py
