[project]
name = "mnemomatic-server"
version = "1.0.0"
description = "Perfect recall for imperfect machines. A shared memory MCP server for LLMs."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2.0",
    "sqlite-vec>=0.1.6,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn>=0.20,<1.0",
    "starlette>=0.27,<1.0",
]

[project.optional-dependencies]
onnx = [
    "onnxruntime>=1.20,<2.0",
    "tokenizers>=0.15",
    "numpy>=1.24,<2.0",
]

[project.scripts]
mnemomatic = "mnemomatic.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemomatic"]

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_mcp_api.py"
