[project]
name = "mnemomatic-cli"
version = "1.1.0"
description = "CLI client for a running Mnem-O-matic MCP server."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mnemomatic-cli = "mnemomatic_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemomatic_cli"]
